fixed margin on mobile for intro and bio

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -50,6 +50,12 @@ p{
 }
 
 
+@media screen and (max-width: 450px) {
+  .Box {
+    padding: 10px 10px ;
+    width: 90vw;
+  }
+}
 
 
 
