--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -8,3 +8,14 @@
     margin-top: 50px;
 }
 
+@media screen and (max-width: 450px) {
+    .MobileMargin{
+        margin-top: 700px;
+    
+    }
+}
+
+
+
+
+
